--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,9 +137,22 @@
 
 .header__notify::before{
     content: "";
-    border: 20px solid;
+    border-width: 20px 26px;
+    border-style: solid;
     border-color: transparent transparent var(--white-color) transparent;
     position: absolute;
+    right: 4px;
+    top: -30px;
+}
+
+.header__notify::after{
+    content: "";
+    display: block;
+    position: absolute;
+    right: 0;
+    top: -16px;
+    width: 90px;
+    height: 20px;
 }
 
 @keyframes headerNotifyGrowth{
