--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,6 +3,7 @@
     --white-color: #fff;
     --black-color: #000;
     --text-color: #333;
+    --border-color: #dbdbdb;
 
 }
 
@@ -64,7 +65,7 @@ html{
     background-color: var(--white-color);
     margin: auto;
     position: relative;
-    z-index: 1;
+    z-index: 3;
     border-radius: 5px;
 }
 
