--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -5,6 +5,9 @@
     --text-color: #333;
     --border-color: #dbdbdb;
 
+    --header-height: 150px;
+    --navbar-height: 34px;
+    --header-with-search-height: calc(var(--header-height) - var(--navbar-height));
 }
 
 * {
@@ -43,6 +46,15 @@ html{
     }
 }
 
+@keyframes growth{
+    from {
+        transform: scale(var(--growth-from));
+    }
+    to {
+        transform: scale(var(--growth-to));
+    }
+}
+
 /* Modal */
 .modal{
     position: fixed;
@@ -51,6 +63,7 @@ html{
     bottom: 0;
     left: 0;
     display: flex;
+    animation: fadeIn linear 0.1s;
 }
 
 .modal__overlay{
@@ -62,12 +75,15 @@ html{
 }
 
 .modal__body{
+    --growth-from: 0.7;
+    --growth-to: 1;
     background-color: var(--white-color);
     margin: auto;
     position: relative;
     z-index: 3;
     border-radius: 5px;
     padding: 30px; 
+    animation: growth linear 0.1s;
 }
 
 /* Button style */
@@ -100,6 +116,7 @@ html{
 .btn.btn--primary{
     color: var(--white-color);
     background-color: var(--primary-color);
+    line-height: 0;
 }
 
 .btn.btn--disabled{
