--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 .header {
-    height: 120px;
+    height: var(--header-height);
     background-image: linear-gradient(0, #fe6433, #f53e2d);
 }
 
@@ -10,6 +10,7 @@
 .header__navbar-list{
     list-style: none;
     padding-left: 0;
+    margin: 4px 0 0 0;
 }
 
 .header__navbar-item{
@@ -260,6 +261,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0  12px;
+    margin-top: 10px;
 }
 
 .auth-form__heading{
@@ -269,7 +272,7 @@
 }
 
 .auth-form__switch-btn{
-    font-size: 2.2rem;
+    font-size: 2.0rem;
     font-weight: 400;
     color: var(--primary-color);
     cursor: pointer;
@@ -343,10 +346,65 @@
 }
 
 .auth-form__socials-title{
-    margin: 0 36px;
+    margin: 0 24px;
 }
 
 .auth-form__socials-google{
     color: #666;
     background-color: var(--white-color);
+}
+
+/*Login form*/
+
+.auth-form__help{
+    display: flex;
+    justify-content: flex-end;
+
+}
+
+.auth-form__help-link{
+    font-size: 1.4rem;
+    text-decoration: 1.6rem;
+    color: #939393;
+}
+
+.auth-form__help-separate{
+    display: block;
+    height: 22px;
+    border-left: 1px solid var(--border-color);
+    margin: 0 16px;
+}
+
+.auth-form__help-forgot{
+    color: var(--primary-color);
+}
+
+/* header-with-search */
+.header-with-search{
+    height: var(--header-with-search-height);
+
+}
+
+.header__logo{
+    width: 200px;
+}
+
+.header__logo-img{
+    width: 150px;
+}
+
+.header__search{
+    flex: 1;
+    height: 40px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+}
+
+.header__cart{
+    width: 150px;
+    text-align: center;
+}
+.header__cart-icon{
+    font-size: 2.4rem;;
+    color: var(--white-color);
 }
