--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -382,7 +382,9 @@
 /* header-with-search */
 .header-with-search{
     height: var(--header-with-search-height);
-
+    display: flex;
+    align-items: center;
+    margin: 0 8px;
 }
 
 .header__logo{
@@ -398,6 +400,8 @@
     height: 40px;
     border-radius: 2px;
     background-color: var(--white-color);
+    display: flex;
+    align-items: center;
 }
 
 .header__cart{
@@ -407,4 +411,82 @@
 .header__cart-icon{
     font-size: 2.4rem;;
     color: var(--white-color);
+}
+
+.header__search-input{
+    flex: 1;
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    font-size: 1.4rem;
+    color: var(--text-color);
+    padding: 0 16px;
+    border-radius: 3px;
+}
+
+.header__search-selection{
+    border-left: 1px solid #ccc;
+    padding-left: 16px;
+    position: relative;
+}   
+
+.header__search-selection-lable{
+    font-size: 1.4rem;
+    color: var(--text-color);
+}
+
+.header__search-selection-icon{
+    font-size: 1.4rem;
+    color: #4a4a4a;
+    margin: 0 4px;
+
+}
+
+.header__search-btn{
+    background-color: var(--primary-color);
+    border: none;
+    height: 34px;
+    width: 60px;
+    border-radius: 3px;
+    margin-right: 3px;
+}
+.header__search-btn:hover{
+    cursor: pointer;
+    background-color: #eb5f43;
+}
+
+.header__search-btn-icon{
+    font-size: 1.4rem;
+    color: var(--white-color);
+}
+
+.header__search-option{
+    position: absolute;
+    right: 0;
+    top: 100%;
+    width: 130px;
+    list-style: none;
+    box-shadow: 0 1px 1px #ccc;
+    padding-left: 0;
+    border-radius: 3px;
+    overflow: hidden;
+}
+
+.header__search-option-item{
+    background-color: var(--white-color);
+    border-radius: 3px;
+    padding: 8px 8px;
+    text-align: right;
+}
+
+.header__search-option-item span{
+    font-size: 1.4rem;
+    color: var(--text-color);
+}
+
+.header__search-option-item i{
+    font-size: 1.2rem;
+    color: var(--primary-color);
+    margin: 0 4px 0 8px;
 }
