--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -407,14 +407,79 @@
 .header__cart{
     width: 150px;
     text-align: center;
+    position: relative;
 }
+
+.header__cart-wrap{
+    position: relative;
+    display: inline-block;
+    padding: 0 12px;
+    cursor: pointer;
+}
+
 .header__cart-icon{
     font-size: 2.4rem;;
     color: var(--white-color);
+    margin-top: 6px;
+}
+
+.header__cart-wrap:hover .header__cart-list{
+    display: block;
+}
+
+.header__cart-list{
+    position: absolute;
+    top: calc(100% + 4px);
+    right: 1px;
+    background-color: var(--white-color);
+    width: 400px;
+    border-radius: 2px;
+    box-shadow: 0 1px 3.125rem 0 rgba(0, 0, 0, 0.2);
+    display: none;
+    animation: fadeIn ease-in 0.2s;
+    cursor: default;
+}
+
+.header__cart-list::after{
+    cursor: pointer;
+    content: "";
+    position: absolute;
+    right: -2px;
+    top: -28px;
+    border-width: 20px 26px;
+    border-style: solid;
+    border-color: transparent transparent var(--white-color) transparent;
+}
+
+.header__cart-list--no-cart{
+    padding: 24px 0;
+}
+
+.header__cart-list--no-car .header__cart-list--no-car img,
+.header__cart-list--no-car .header__cart-list--no-car-msg{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.header__cart-list--no-cart img{
+    width: 200px;
+    display: none;
+ }
+
+.header__cart-list-no-cart-msg{
+    display: none;
+    font-size: 1.5rem;
+    margin-top: 12px;
+    color: var(--text-color);
+}
+.header__search-input-wrap{
+    flex: 1;
+    height: 100%;
+    position: relative;
 }
 
 .header__search-input{
-    flex: 1;
     width: 100%;
     height: 100%;
     border: none;
@@ -422,13 +487,15 @@
     font-size: 1.4rem;
     color: var(--text-color);
     padding: 0 16px;
-    border-radius: 3px;
+    border-radius: 2px;
 }
 
 .header__search-selection{
     border-left: 1px solid #ccc;
     padding-left: 16px;
     position: relative;
+    cursor: pointer;
+
 }   
 
 .header__search-selection-lable{
@@ -448,8 +515,8 @@
     border: none;
     height: 34px;
     width: 60px;
-    border-radius: 3px;
-    margin-right: 3px;
+    border-radius: 2px;
+    margin-right: 2px;
 }
 .header__search-btn:hover{
     cursor: pointer;
@@ -461,32 +528,115 @@
     color: var(--white-color);
 }
 
+.header__search-selection:hover .header__search-option{
+    display: block;
+}
+
 .header__search-option{
     position: absolute;
     right: 0;
     top: 100%;
     width: 130px;
     list-style: none;
-    box-shadow: 0 1px 1px #ccc;
+    box-shadow: 0 1px 2px #ccc;
     padding-left: 0;
-    border-radius: 3px;
-    overflow: hidden;
+    border-radius: 2px;
+    /* overflow: hidden; */
+    display: none;
+}
+
+.header__search-option::after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 10px;
+    /* background-color: red; */
+    top: -10px;
+    left: 0;
+    position: absolute;
 }
 
 .header__search-option-item{
     background-color: var(--white-color);
-    border-radius: 3px;
+    border-radius: 2px;
     padding: 8px 8px;
-    text-align: right;
+}
+
+.header__search-option-item:first-child{
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+}
+
+.header__search-option-item:last-child{
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+
+.header__search-option-item:hover{
+    background-color: #fafafa;
+    cursor: pointer;
 }
 
 .header__search-option-item span{
     font-size: 1.4rem;
     color: var(--text-color);
+    margin-left: 8px;
 }
 
 .header__search-option-item i{
     font-size: 1.2rem;
     color: var(--primary-color);
-    margin: 0 4px 0 8px;
+    margin-left: 12px;
+    display: none;
+}
+
+.header__search-option-item--active i{
+    display: inline-block;
+}
+
+.header__search-input:focus ~ .header__search-history{
+    display: block;
+}
+/* Search history */
+.header__search-history{
+    position: absolute;
+    top: calc(100% + 2px);
+    left: 0;
+    width: calc(100% - 16px);
+    background-color: var(--white-color);
+    border-radius: 2px;
+    box-shadow: 0 2px 5px rgb(189, 189, 189);
+    display: none;
+    overflow: hidden;
+}     
+
+.header__search-history-heading{
+    margin: 6px 12px;
+    font-size: 1.4rem;
+    color: #999;
+    font-weight: 400;
+}
+
+.header__search-history-list{
+    padding-left: 0;
+    list-style: none;
+    margin: 6px 0 0;
+}
+
+.header__search-history-item{
+    height: 38px;
+    padding: 0 12px;
+
+}
+
+.header__search-history-item:hover{
+    background-color: #fafafa;
+}
+
+.header__search-history-item a{
+    line-height: 38px;
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: var(--text-color);
+    display: block;
 }
