--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -455,24 +455,38 @@
     padding: 24px 0;
 }
 
-.header__cart-list--no-car .header__cart-list--no-car img,
-.header__cart-list--no-car .header__cart-list--no-car-msg{
+.header__cart-list--no-cart .header__cart-list--no-cart-img,
+.header__cart-list--no-cart .header__cart-list--no-cart-msg{
     margin-left: auto;
     margin-right: auto;
     display: block;
 }
 
-.header__cart-list--no-cart img{
+.header__cart-no-cart-img{
     width: 200px;
     display: none;
  }
 
-.header__cart-list-no-cart-msg{
+.header__cart-list--no-cart-msg{
     display: none;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     margin-top: 12px;
     color: var(--text-color);
 }
+
+.header__cart-notice{
+    position: absolute;
+    top: -4px;
+    right: -4px;
+    padding: 1px 7px;
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+    border-radius: 10px;
+    border: 2px solid #EE4D2D;
+    color: var(--primary-color);
+    background-color: var(--white-color);
+}
+
 .header__search-input-wrap{
     flex: 1;
     height: 100%;
