--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -793,3 +793,20 @@
     color: var(--primary-color);
 }
 
+/* Home sort */
+
+.select-input {
+
+}
+
+.select-input__label {
+
+}
+
+.home-filter__page {
+
+}
+
+.home-filter__page-number {
+
+}
