--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -34,18 +34,25 @@ html{
 .grid_row {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -12px;
-    margin-right: -12px;
+    /* margin-left: -12px;
+    margin-right: -12px; */
+    margin-top: 0;
+    align-items: stretch; /*ensures equal height alignment */
+
 }
 
 /* Test */
 .grid__column-2{
+    box-sizing: border-box;
+    margin: 0;
     padding-left: 12px;
     padding-right: 12px;
     width: 16.6667%;
 }
 
-.grid__column-8{
+.grid__column-10{
+    box-sizing: border-box;
+    margin: 0;
     padding-left: 12px;
     padding-right: 12px;
     width: 66.6667%;
@@ -114,7 +121,7 @@ html{
     outline: none;
     cursor: pointer;
     color: var(--text-color);
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
 }
