--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -31,11 +31,11 @@ html{
     width: 100%;
 }
 
-.grid_row {
+.grid__row {
     display: flex;
     flex-wrap: wrap;
-    /* margin-left: -12px;
-    margin-right: -12px; */
+    margin-left: -12px;
+    margin-right: -12px;
     margin-top: 0;
     align-items: stretch; /*ensures equal height alignment */
 
