--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -8,6 +8,8 @@
     --header-height: 150px;
     --navbar-height: 34px;
     --header-with-search-height: calc(var(--header-height) - var(--navbar-height));
+
+    --star-color: #FFD700;
 }
 
 * {
@@ -34,8 +36,8 @@ html{
 .grid__row {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -12px;
-    margin-right: -12px;
+    margin-left: -5px;
+    margin-right: -5px;
     margin-top: 0;
     align-items: stretch; /*ensures equal height alignment */
 
@@ -45,19 +47,24 @@ html{
 .grid__column-2{
     box-sizing: border-box;
     margin: 0;
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
     width: 16.6667%;
 }
 
 .grid__column-10{
     box-sizing: border-box;
     margin: 0;
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
     width: 66.6667%;
 }
 
+.grid__column-2-4{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 20%;
+}
 /* Animation */
 @keyframes fadeIn{
     from {
@@ -145,4 +152,60 @@ html{
     cursor: default;
     color: #949494;
     background-color: #c3c3c3;
+}
+
+/* Selection */
+.select-input{
+    position: relative;
+    min-width: 120px;
+    height: 34px;
+    padding: 0 12px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.select-input:hover .select-input__list{
+    display: block;
+}
+.select-input__label{
+    font-size: 1.4rem;
+}
+
+.select-input__icon{
+    font-size: 1.4rem;
+    color: rgb(131, 131, 131);
+    margin: 0 16px 0 8px;
+    position: relative;
+    top: 1px;
+}
+
+.select-input__list{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 25px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+    padding: 8px 16px;
+    list-style: none;
+    display: none;
+}
+
+.select-input__link{
+    font-size: 1.4rem;
+    color: var(--text-color);
+    text-decoration: none;
+    display: block;
+    padding: 4px 0;
+}
+
+.select-input__link:hover{
+    color: var(--primary-color);
+}
+
+.home-product-item__sale-off-percent{
+
 }
