--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -4,7 +4,7 @@
     --black-color: #000;
     --text-color: #333;
     --border-color: #dbdbdb;
-
+    --star-gold-color: #FFCE3E;
     --header-height: 150px;
     --navbar-height: 34px;
     --header-with-search-height: calc(var(--header-height) - var(--navbar-height));
